--- a/Cargo.toml
+++ b/Cargo.toml
@@ -93,9 +93,7 @@ arrow-select = { version = "55.0.0", path = "./arrow-select" }
 arrow-string = { version = "55.0.0", path = "./arrow-string" }
 parquet = { version = "55.0.0", path = "./parquet", default-features = false }
 
-# THIS DEPENDENCY IS COMMON, MODIFIED BY ARAS
-# Once arrow-rs becomes stable within a single version, remove this pinning
-chrono = { version = "=0.4.39", default-features = false, features = ["clock"] }
+chrono = { version = "0.4.40", default-features = false, features = ["clock"] }
 
 # release inherited profile keeping debug information and symbols
 # for mem/cpu profiling
