--- a/parquet/Cargo.toml
+++ b/parquet/Cargo.toml
@@ -45,7 +45,7 @@ arrow-data = { workspace = true, optional = true }
 arrow-schema = { workspace = true, optional = true }
 arrow-select = { workspace = true, optional = true }
 arrow-ipc = { workspace = true, optional = true }
-object_store = { version = "0.12.0", default-features = false, optional = true }
+object_store = { git = "https://github.com/synnada-ai/arrow-rs-object-store", default-features = false, optional = true }
 
 bytes = { version = "1.1", default-features = false, features = ["std"] }
 thrift = { version = "0.17", default-features = false }
@@ -85,8 +85,8 @@ serde_json = { version = "1.0", features = ["std"], default-features = false }
 arrow = { workspace = true, features = ["ipc", "test_utils", "prettyprint", "json"] }
 tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread", "io-util", "fs"] }
 rand = { version = "0.9", default-features = false, features = ["std", "std_rng", "thread_rng"] }
-object_store = { version = "0.12.0", default-features = false, features = ["azure", "fs"] }
-sysinfo = { version = "0.35.0", default-features = false, features = ["system"] }
+object_store = { git = "https://github.com/synnada-ai/arrow-rs-object-store.git", default-features = false, features = ["azure", "fs"] }
+sysinfo = { version = "0.34.0", default-features = false, features = ["system"] }
 
 [package.metadata.docs.rs]
 all-features = true
